--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-2 p-10">
+<div class="p-10 grid lg:grid-cols-2 md:grid-cols-1">
     <div>
         <h1 class="text-3xl text-center font-bold text-slate-800">Hi, I'm Victor 👋</h1>
 
@@ -13,11 +13,16 @@
         </ul>
 
         <p class="text-slate-800 m-5 mt-10 mb-2">Alternatively, you can also check out <a class="text-blue-500 hover:underline" href="https://github.com/vicsaa01">my GitHub page</a></p>
+    
+        <br/><br/>
     </div>
 
-    <div class="border border-slate-700 rounded-lg grid grid-cols-2">
-        <img class="rounded-full mx-auto my-10" src="foto.png"/>
-        <div class="mt-10">
+    <div class="border border-slate-700 rounded-lg grid sm:grid-cols-3 grid-cols-1">
+        <div class="flex justify-center">
+            <img class="rounded-full m-10 h-40" src="foto.png"/>
+        </div>
+
+        <div class="mt-10 sm:col-span-2 col-span-1">
             <h3 class="text-2xl text-center">Personal info</h3>
             <ul class="list-disc p-10 space-y-5">
                 <li>Full name: Víctor Saakes Vergara</li>
