--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,15 +1,30 @@
 <nav class="nav bg-slate-500 p-0">
-  <div class="grid grid-cols-5 gap-10">
-    <a class="rounded p-5" href="/">
-      <img src="logo.png" class="h-6 m-0"/>
-    </a>
-    <a class="text-center py-4 text-white font-bold hover:text-slate-800 hover:bg-slate-300" href="/projects">Projects</a>
-    <a class="text-center py-4 text-white font-bold hover:text-slate-800 hover:bg-slate-300" href="/cv">CV</a>
-    <a class="text-center py-4 text-white font-bold hover:text-slate-800 hover:bg-slate-300" href="/contact">Contact</a>
+  <div class="grid lg:grid-cols-5 md:grid-cols-4 lg:gap-7 md:gap-4">
+    <div class="grid md:grid-cols-1 sm:grid-cols-4 grid-cols-4">
+      <a class="py-5 ps-3 md:col-span-1 sm:col-span-3 col-span-3" href="/">
+        <img src="logo.png" class="h-6 m-0"/>
+      </a>
+
+      <div class="flex justify-end">
+        <a class="m-5 md:hidden sm:block block" (click)="toggleMenu()">
+          <img [src]="icon" class="h-6 m-0"/>
+        </a>
+      </div>
+    </div>
+
+    <!-- navbar -->
+    <a class="text-center py-4 text-white font-bold hover:text-slate-800 hover:bg-slate-300 md:block sm:hidden hidden" href="/projects">Projects</a>
+    <a class="text-center py-4 text-white font-bold hover:text-slate-800 hover:bg-slate-300 md:block sm:hidden hidden" href="/cv">CV</a>
+    <a class="text-center py-4 text-white font-bold hover:text-slate-800 hover:bg-slate-300 md:block sm:hidden hidden" href="/contact">Contact</a>
+
+    <!-- dropdown menu -->
+    <a class="text-center py-4 text-white font-bold hover:text-slate-800 hover:bg-slate-300 dropdown-link" style="display:none;" href="/projects">Projects</a>
+    <a class="text-center py-4 text-white font-bold hover:text-slate-800 hover:bg-slate-300 dropdown-link" style="display:none;" href="/cv">CV</a>
+    <a class="text-center py-4 text-white font-bold hover:text-slate-800 hover:bg-slate-300 dropdown-link" style="display:none;" href="/contact">Contact</a>
   </div>
 </nav>
 
-<main class="h-screen">
+<main class="sm:h-screen h-fit">
   <router-outlet />
 </main>
 
