--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,8 +1,8 @@
-<div class="p-10 grid lg:grid-cols-2 md:grid-cols-1">
+<div class="py-10 lg:px-10 md:px-8 sm:px-6 px-4 grid lg:grid-cols-2 md:grid-cols-1">
     <div>
         <h1 class="text-3xl text-center font-bold text-slate-800">Hi, I'm Victor 👋</h1>
 
-        <p class="text-slate-800 m-5 mt-10 mb-2">I'm a full stack web developer based in Valencia, Spain. Take a look at some of my latest projects:</p>
+        <p class="text-slate-800 m-2 mt-10 lg:me-10 md:me-10">I'm a full stack web developer based in Valencia, Spain. Take a look at some of my latest projects:</p>
         <ul class="list-none ml-5">
             <li class="before:content-['🔹'] before:mr-2 hover:text-blue-500 cursor-pointer">
                 <a href="https://gameforum.onrender.com">GameForum, a social network for media critics</a>
@@ -12,7 +12,7 @@
             </li>
         </ul>
 
-        <p class="text-slate-800 m-5 mt-10 mb-2">Alternatively, you can also check out <a class="text-blue-500 hover:underline" href="https://github.com/vicsaa01">my GitHub page</a></p>
+        <p class="text-slate-800 m-2 mt-10 lg:me-10 md:me-10">Alternatively, you can also check out <a class="text-blue-500 hover:underline" href="https://github.com/vicsaa01">my GitHub page</a></p>
     
         <br/><br/>
     </div>
