--- a/frontend/src/app/contact-page/contact-page.component.html
+++ b/frontend/src/app/contact-page/contact-page.component.html
@@ -29,7 +29,7 @@
 
             <br/><br/><br/>
 
-            <div class="grid grid-cols-6 mt-10">
+            <div class="grid grid-cols-6 mb-10">
                 <div class="col-span-1"></div>
 
                 <div class="col-span-4">
