--- a/frontend/src/app/cv-page/cv-page.component.html
+++ b/frontend/src/app/cv-page/cv-page.component.html
@@ -1,1 +1,11 @@
-<p>cv-page works!</p>
+<div class="py-10 lg:px-10 md:px-8 sm:px-6 px-4">
+    <div class="mb-10">
+        <h1 class="text-center text-2xl">My curriculum</h1>
+    </div>
+
+    <div class="grid lg:grid-cols-3 md:grid-cols-1 gap-10">
+        <app-cvsection [title]="'Work experience'" [entries]="this.entries.slice(0,1)"/>
+        <app-cvsection [title]="'Education'" [entries]="this.entries.slice(1,3)"/>
+        <app-cvsection [title]="'Volunteering'" [entries]="this.entries.slice(3,4)"/>
+    </div>
+</div>
