--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         <p class="text-slate-800 m-2 mt-10 lg:me-10 md:me-10">I'm a full stack web developer based in Valencia, Spain. Take a look at some of my latest projects:</p>
         <ul class="list-none ml-5">
             <li class="before:content-['🔹'] before:mr-2 hover:text-blue-500 cursor-pointer">
-                <a href="https://gameforum.onrender.com">GameForum, a social network for media critics</a>
+                <a href="https://gameforum.onrender.com">GameForum</a>
             </li>
             <li class="before:content-['🔹'] before:mr-2 hover:text-blue-500 cursor-pointer">
                 <a href="https://centrovergara.onrender.com/es">Centro Vergara website</a>
