#017 - styling and info fix

--- a/frontend/src/app/cventry/cventry.component.html
+++ b/frontend/src/app/cventry/cventry.component.html
@@ -1,6 +1,7 @@
 <div class="bg-slate-200 rounded-lg p-3 mt-5">
-    <h3 class="text-lg font-semibold">{{ institution }}</h3>
-    <p class="italic mb-2">{{ duration }}</p>
+    <h3 class="text-lg font-semibold mb-2">{{ role }}</h3>
+    <p class="mb-2">{{ institution }}</p>
+    <p class="italic mb-3">{{ duration }}</p>
     <ul class="list-disc pl-10">
         <li *ngFor="let point of bulletPoints">{{ point }}</li>
     </ul>
