--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,20 +1,16 @@
-<div class="py-10 lg:px-10 md:px-8 sm:px-6 px-4 grid lg:grid-cols-2 md:grid-cols-1">
+<h1 class="text-3xl text-center font-bold text-slate-800 mt-10">Hi, I'm Victor 👋</h1>
+
+<div class="py-10 lg:px-10 md:px-8 sm:px-6 px-4 grid lg:grid-cols-2 md:grid-cols-1 gap-10">
     <div>
-        <h1 class="text-3xl text-center font-bold text-slate-800">Hi, I'm Victor 👋</h1>
 
-        <p class="text-slate-800 m-2 mt-10 lg:me-10 md:me-10">I'm a full stack web developer based in Valencia, Spain. Take a look at some of my latest projects:</p>
-        <ul class="list-none ml-5">
-            <li class="before:content-['🔹'] before:mr-2 hover:text-blue-500 cursor-pointer">
-                <a href="https://gameforum.onrender.com">GameForum</a>
-            </li>
-            <li class="before:content-['🔹'] before:mr-2 hover:text-blue-500 cursor-pointer">
-                <a href="https://centrovergara.onrender.com/es">Centro Vergara website</a>
-            </li>
-        </ul>
-
-        <p class="text-slate-800 m-2 mt-10 lg:me-10 md:me-10">Alternatively, you can also check out <a class="text-blue-500 hover:underline" href="https://github.com/vicsaa01">my GitHub page</a></p>
-    
-        <br/><br/>
+        <div class="rounded-lg bg-slate-200 md:p-10 sm:p-5 p-5">
+            <p class="text-slate-800 m-2">I'm a <span class="font-bold">full stack web developer</span> based in Valencia (Spain) and Rotterdam (Netherlands). My focus is mainly on <span class="font-semibold">React</span> applications, but I also work with <span class="font-semibold">Angular</span>.</p>
+            <br class="md:block sm:hidden hidden"/>
+            <p class="text-slate-800 m-2 mt-5">Take a look at some of the websites I've created by visiting the <a class="text-blue-500 hover:underline" href="/projects">Projects page</a></p>
+            <br class="md:block sm:hidden hidden"/>
+            <p class="text-slate-800 m-2 mt-5">Alternatively, you can also check out <a class="text-blue-500 hover:underline" href="https://github.com/vicsaa01">my GitHub repos</a></p>
+            <br class="md:block sm:hidden hidden"/>
+        </div>
     </div>
 
     <div class="border border-slate-700 rounded-lg grid sm:grid-cols-3 grid-cols-1">
@@ -23,11 +19,11 @@
         </div>
 
         <div class="mt-10 sm:col-span-2 col-span-1">
-            <h3 class="text-2xl text-center">Personal info</h3>
-            <ul class="list-disc p-10 space-y-5">
-                <li>Full name: Víctor Saakes Vergara</li>
-                <li>Nationality: spanish, dutch</li>
-                <li>E-mail: victorsaakes&#64;gmail.com</li>
+            <h3 class="text-2xl text-center">About me</h3>
+            <ul class="p-10 space-y-5">
+                <li class="before:content-['🔹'] before:me-2">Full name: Víctor Saakes Vergara</li>
+                <li class="before:content-['🔹'] before:me-2">Nationality: spanish, dutch (dual citizen and resident)</li>
+                <li class="before:content-['🔹'] before:me-2">E-mail: victorsaakes&#64;gmail.com</li>
             </ul>
         </div>
     </div>
