fix #1 - Projects page

--- a/frontend/src/app/project/project.component.html
+++ b/frontend/src/app/project/project.component.html
@@ -1,6 +1,6 @@
-<div class="bg-slate-200 rounded-lg p-5">
+<div class="bg-slate-200 rounded-lg border hover:border-slate-700">
     <a [href]="this.link">
-        <p class="text-xl font-bold mb-3">{{ name }}</p>
-        <p>{{ description }}</p>
+        <p class="text-xl font-bold mb-3 p-5 pb-0">{{ name }}</p>
+        <p class="p-5 pt-0">{{ description }}</p>
     </a>
 </div>
