--- a/frontend/src/app/projects-page/projects-page.component.html
+++ b/frontend/src/app/projects-page/projects-page.component.html
@@ -1,6 +1,6 @@
 <div class="py-10 lg:px-10 md:px-8 sm:px-6 px-4">
     <div class="mb-10">
-        <h1 class="text-center text-2xl">Some projects I've been working on...</h1>
+        <h1 class="text-center text-2xl">Some websites I've been working on...</h1>
     </div>
 
     <div class="grid lg:grid-cols-2 md:grid-cols-1 gap-10">
