--- a/frontend/src/app/projects-page/projects-page.component.html
+++ b/frontend/src/app/projects-page/projects-page.component.html
@@ -1,11 +1,13 @@
-<div class="py-10 lg:px-10 md:px-8 sm:px-6 px-4">
-    <div class="mb-10">
-        <h1 class="text-center text-2xl">Some websites I've been working on...</h1>
-    </div>
+<div class="lg:h-screen md:h-fit">
+    <div class="py-10 lg:px-10 md:px-8 sm:px-6 px-4">
+        <div class="mb-10">
+            <h1 class="text-center text-2xl">Some websites I've been working on...</h1>
+        </div>
 
-    <div class="grid lg:grid-cols-2 md:grid-cols-1 gap-10">
-        <app-project [link]="'https://gameforum.onrender.com'" [name]="'GameForum'" [description]="'A social network to comment on movies, music and games, and discuss them with other users'"/>
-        <app-project [link]="'https://qiwi.onrender.com'" [name]="'Qiwi'" [description]="'A site where you can use simple widgets, including a calculator, global times and a weather forecast'"/>
-        <app-project [link]="'https://centrovergara.onrender.com'" [name]="'Centro Vergara website'" [description]="'Work in progress...'"/>
+        <div class="grid lg:grid-cols-2 md:grid-cols-1 gap-10">
+            <app-project [link]="'https://gameforum.onrender.com'" [name]="'GameForum'" [description]="'A social network to comment on movies, music and games, and discuss them with other users'"/>
+            <app-project [link]="'https://qiwi.onrender.com'" [name]="'Qiwi'" [description]="'A site where you can use simple widgets, including a calculator, global times and a weather forecast'"/>
+            <app-project [link]="'https://centrovergara.onrender.com'" [name]="'Centro Vergara website'" [description]="'Work in progress...'"/>
+        </div>
     </div>
 </div>
