--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -5,25 +5,34 @@
         <div>
 
             <div class="rounded-lg bg-slate-200 md:p-10 sm:p-5 p-5">
-                <p class="text-slate-800 m-2">I'm a <span class="font-bold">full stack web developer</span> based in Valencia (Spain) and Rotterdam (Netherlands). My focus is mainly on <span class="font-semibold">React</span> applications, but I also work with <span class="font-semibold">Angular</span>.</p>
+                <p class="text-slate-800 m-2">
+                    I'm a <span class="font-semibold">full stack web developer</span> based in Rotterdam (Netherlands).
+                    My tech stack includes React/Angular, Express/Flask, MongoDB and more.
+                </p>
                 <br class="md:block sm:hidden hidden"/>
-                <p class="text-slate-800 m-2 mt-5">Take a look at some of the websites I've created by visiting the <a class="text-blue-500 hover:underline" href="/projects">Projects page</a></p>
+                <p class="text-slate-800 m-2 mt-5">
+                    I recently obtained a BSc in <span class="font-semibold">Computer Science</span> from the Technical University of Valencia (UPV) in Spain,
+                    and since then I've been doing several solo projects.
+                </p>
                 <br class="md:block sm:hidden hidden"/>
-                <p class="text-slate-800 m-2 mt-5">Alternatively, you can also check out <a class="text-blue-500 hover:underline" href="https://github.com/vicsaa01">my GitHub repos</a></p>
+                <p class="text-slate-800 m-2 mt-5">
+                    Take a look at some of the websites I've created by visiting the <a class="text-blue-500 hover:underline" href="/projects">Projects page</a>.
+                    Alternatively, you can also check out <a class="text-blue-500 hover:underline" href="https://github.com/vicsaa01">my GitHub repos</a>
+                </p>
                 <br class="md:block sm:hidden hidden"/>
             </div>
         </div>
 
         <div class="border border-slate-700 rounded-lg grid sm:grid-cols-3 grid-cols-1">
             <div class="flex justify-center">
-                <img class="rounded-full m-10 h-40" src="foto.png"/>
+                <img class="rounded-full m-10 h-40" src="foto2.jpg"/>
             </div>
 
             <div class="mt-10 sm:col-span-2 col-span-1">
                 <h3 class="text-2xl text-center">About me</h3>
                 <ul class="p-10 space-y-5">
                     <li class="before:content-['🔹'] before:me-2">Full name: Víctor Saakes Vergara</li>
-                    <li class="before:content-['🔹'] before:me-2">Nationality: spanish, dutch (dual citizen and resident)</li>
+                    <li class="before:content-['🔹'] before:me-2">Nationality: spanish and dutch</li>
                     <li class="before:content-['🔹'] before:me-2">E-mail: victorsaakes&#64;gmail.com</li>
                 </ul>
             </div>
