Added TheGateWeb entry

--- a/frontend/src/app/projects-page/projects-page.component.html
+++ b/frontend/src/app/projects-page/projects-page.component.html
@@ -4,10 +4,18 @@
             <h1 class="text-center text-2xl">Some websites I've been working on...</h1>
         </div>
 
+        <p class="text-xl m-3">Past projects</p>
+
         <div class="grid lg:grid-cols-2 md:grid-cols-1 gap-10">
             <app-project [link]="'https://gameforum.onrender.com'" [name]="'GameForum'" [description]="'A social network to comment on movies, music and games, and discuss them with other users'"/>
             <app-project [link]="'https://qiwi.onrender.com'" [name]="'Qiwi'" [description]="'A site where you can use simple widgets, including a calculator, global times and a weather forecast'"/>
-            <app-project [link]="'https://centrovergara.onrender.com'" [name]="'Centro Vergara website'" [description]="'Work in progress...'"/>
+        </div>
+
+        <p class="text-xl m-3 mt-10">Current projects (not finished)</p>
+
+        <div class="grid lg:grid-cols-2 md:grid-cols-1 gap-10">
+            <app-project [link]="'https://thegateweb.onrender.com'" [name]="'TheGateWeb'" [description]="'A portal to your favorite sites'"/>
+            <app-project [link]="'https://centrovergara.onrender.com'" [name]="'Centro Vergara website'" [description]="'Centro Vergara\'s official website'"/>
         </div>
     </div>
 </div>
